# medicine_agent

./: .env  main.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml
src/agent/: agent.py  tools.py
src/config/: configs.py
src/database/: __init__.py  mysql_connector.py  neo4j_graph_db.py  qdrant.py
src/database/schema/: chunks.txt  medicine.txt  medicine_detailt.txt  pharmaceutical.txt
src/utlis/: embedding_medicine.py
